@@ -30,6 +30,8 @@ Core:
      - Can't browse anymore (cf. mediatree)
  * Add support for dual subtitles selection (via the player)
  * Support of HTML help (via the vlc_plugin.h:set_help_html macro)
+ * New `--hold-rate` option to set the temporary speed when holding the
+   spacebar after a quick double press
 
 Audio output:
  * PipeWire (native) audio output support
